Fix: Increase QR crop to make white border visible
- Reduced container to 90x90px
- Increased negative margin to -19px
- More aggressive crop reveals white padding border
- White frame now clearly visible

--- a/style.css
+++ b/style.css
@@ -1433,8 +1433,8 @@ footer a:hover {
 
 #conceptQrCode {
     padding: 0;
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     overflow: hidden;
 }
 
@@ -1443,7 +1443,7 @@ footer a:hover {
     display: block;
     width: 128px !important;
     height: 128px !important;
-    margin: -14px;
+    margin: -19px;
 }
 
 .concept-qr-meta {
